try to fix renderpartial issue

--- a/BabySittingCoop.Web/Views/Home/Index.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 </div>
 @section Menu
 {
-    @{Html.RenderPartial("_Menu", "Index");}                    
+    @{Html.RenderPartial("Menu", "Index");}                    
 }
 @section Scripts
 {
