--- a/BabySittingCoop.Web/Views/Home/Index.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
 </div>
 @section Menu
 {
-    @{Html.RenderPartial("Menu", "Index");}                    
+    hey
+    @*@{Html.RenderPartial("Menu", "Index");}*@                    
 }
 @section Scripts
 {
