--- a/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
@@ -20,7 +20,8 @@
 </table>
 @section Menu
 {
-    @{Html.RenderPartial("Menu", "Recommendations");}                    
+    hey
+    @*@{Html.RenderPartial("Menu", "Recommendations");}   *@                 
 }
 
 @section Scripts
