--- a/BabySittingCoop.Web/Views/Home/Index.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Index.cshtml
@@ -9,8 +9,7 @@
 </div>
 @section Menu
 {
-    hey
-    @*@{Html.RenderPartial("Menu", "Index");}*@                    
+    @{Html.RenderPartial("Menu", "Index");}                    
 }
 @section Scripts
 {
