--- a/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
@@ -20,8 +20,7 @@
 </table>
 @section Menu
 {
-    hey
-    @*@{Html.RenderPartial("Menu", "Recommendations");}   *@                 
+    @{Html.RenderPartial("Menu", "Recommendations");}                    
 }
 
 @section Scripts
