try to fix renderpartial issue

--- a/BabySittingCoop.Web/Views/Home/Index.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
 <div id="babysitting-pager">
 </div>
 @section Menu
-{
-    @{Html.RenderPartial("Menu", "Index");}                    
-}
+{@*
+    @{Html.RenderPartial("Menub", "Index");}                    
+*@}
 @section Scripts
 {
 <script type="text/javascript">
