--- a/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
@@ -20,7 +20,7 @@
 </table>
 @section Menu
 {
-    @{Html.RenderPartial("Menu", "Recommendations");}                    
+    @*@{Html.RenderPartial("Menub", "Recommendations");}*@                    
 }
 
 @section Scripts
