--- a/BabySittingCoop.Web/Views/Shared/_Layout.cshtml
+++ b/BabySittingCoop.Web/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
         <div class="row-fluid">
             <div class="span3">
                 <div class="well sidebar-nav">
-                    @RenderSection("Menu")                    
+                    @RenderSection("Navigation", false)
                 </div>
                 <!--/.well -->
             </div>
