--- a/BabySittingCoop.Web/Views/Shared/_Layout.cshtml
+++ b/BabySittingCoop.Web/Views/Shared/_Layout.cshtml
@@ -51,7 +51,9 @@
         <div class="row-fluid">
             <div class="span3">
                 <div class="well sidebar-nav">
+                    <ul class="nav nav-list">
                     @RenderSection("Navigation", false)
+                    </ul>
                 </div>
                 <!--/.well -->
             </div>
