--- a/BabySittingCoop.Web/Views/Home/Index.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Index.cshtml
@@ -15,33 +15,10 @@
 }
 @section Scripts
 {
-<script type="text/javascript">
-    $(function () {
-        $("#babysitting-list").jqGrid({
-            url: '@Url.Action("GetBabySittingPoints")',
-            datatype: 'json',
-            mtype: 'POST',
-            colNames: ['', 'Name', 'Provided Points', 'Receiver Points', 'Total Points'],
-            colModel: [
-                    { name: 'Id', index: 'Id', align: 'left', sortable: false, hidden: true },
-                    { name: 'Name', index: 'Name', align: 'center' },
-                    { name: 'ProvidedPoints', index: 'ProvidedPoints', align: 'right' },
-                    { name: 'ReceiverPoints', index: 'ReceiverPoints', align: 'right' },
-                    { name: 'TotalPoints', index: 'TotalPoints', align: 'right' }
-                ],
-            autowidth: true,
-            caption: '',
-            pager: $("#babysitting-pager"),
-            rowNum: '20',
-            viewrecords: true,
-            height: '100%',
-            sortname: 'TotalPoints',
-            sortorder: "desc",
-            postData: {
-
-            }
-        });
-
-    });
+    <script type="text/javascript">
+    var config = {
+        listUrl: '@Url.Action("GetBabySittingPoints")'
+    }
     </script>
+    <script src="@Url.Content("~/Scripts/rankings.js")" type="text/javascript"></script>
 }
