add changed schema, headings, titles

--- a/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Recommendations";
 }
 @{
-    ViewBag.Title = "Babysitting Point Rankings";
+    ViewBag.Title = "Top 10 Babysitting Point Recommendations";
 }
 <h2>
-    Babysitting Recommendations</h2>
+    Top 10 Babysitting Recommendations</h2>
 <div class="controls">
     <label for="babysitters">
         Choose Babysitter
@@ -19,6 +19,8 @@
 </div>
 <table id="recommendation-list">
 </table>
+<div id="recommendation-pager">
+</div>
 @section Navigation
 {
     <li class="nav-header">Menu</li>
