--- a/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
+++ b/BabySittingCoop.Web/Views/Home/Recommendations.cshtml
@@ -6,6 +6,13 @@
 }
 <h2>
     Top 10 Babysitting Recommendations</h2>
+<div class="well">
+    <h3>
+        Recommendations</h3>
+    <p>
+        Recommendations for babysitters that have not yet been used for a babysitter are
+        ranked by provider points.</p>
+</div>
 <div class="controls">
     <label for="babysitters">
         Choose Babysitter
